[package]
name = "basalt"
version = "0.1.0"
authors = ["Alec Snyder <linuxbash8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
dirs = "2.0.2"
base32 = "0.4.0"
serde_json = "1.0.50"
serde = { version = "1.0.106", features = ["derive"] }
nix = "0.17.0"
clap = "2.33.0"
glob = "0.3.0"
tempfile = "3.1.0"
