[package]
name = "basalt"
description = "A modern password and secret manager"
version = "0.1.0"
authors = ["Alec Snyder <linuxbash8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.7"
dirs = "4.0.0"
base32 = "0.4.0"
serde_json = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }
clap = "2.33.3"
glob = "0.3.0"
tempfile = "3.2.0"
fork = "0.1.18"
